# LimitUpStreamFactor

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  config.json  config.yaml  make_script.sh
demo/: BaseFactorGenerator.cpp  Basic.cpp  MoneyFlow.cpp
docs/: update_note.md
include/: MatchEngineAPI.hpp  MatchEngineAPIData.hpp  MatchEngineAPIStruct.hpp  ObjectPool.hpp
include/utils/: rounding.h
limit_up/: factor_description_p1.md  factor_description_p2.md  factor_description_p3.md  factor_description_p4.md  factor_description_p5.md  factor_description_p6.md
limit_up/tmp/: A_P_opponents_ratio_sum_fix0.h  BA_emotion_diff_sqrt_jup.h  Boosting_average_zb_ratio_before_last_20.h  Decaying_strength.h  EF_profit_coss_ratio_real_3.h  FQS_2_ZT_compared_volume.h  Fc_ttickab_bs_qty_ratio.h  Fc_ttickab_lp_op_diff_max_turn.h  Sheep_or_goat.h  Short_buy_sell_mean_ratio.h  Skk_order_bs_ratio_mean.h  Sss_1s_volsbo_num_bsdiff.h  Sss_4wbigamt1_diff_open.h  Sss_after_pbtimemax_7.h  Sss_after_pbtimemax_8.h  Sss_breaknum_diff.h  Sss_tk_slope_sell_t20_max.h  Sss_tk_spctdiff_all_half.h  Sss_to_pricediffstd_all_s60.h  Stdbvol.h  Straight_diff_mean.h  Straight_diff_mean_s.h  Sundc_T_Tran_6_13.h  Sundc_t_tran_14.h  Sundc_t_tran_16_fix.h  Sundc_t_tran_18_jup.h  V_BLtNzR23.h  V_BSVolRatio2.h  V_WAmtSLt23.h  V_vtpcBact23_4.h  Volume_pctchg_corr_linear.h  Vwap.h  Wd_t_10_itvl_max.h  Wd_t_big_pct_max.h  Wj_TTick_20_bsv4.h  Wwd_t1_corrl_pv.h  Xbc_20230525_2.h  Yzhan_hf_ak2_40.h  Yzhan_hf_ak4_40.h  Yzhan_hf_b2_38.h  (+13 more)
limit_up/因子解释和数据接口/: 打板因子_解释.md  打板字段_first_version.md  打板数据接口.md
python/: UpdateMin1Features.py  UpdateMin1Features.sh  my_utils.py
src/: LimitUp1.cpp
tmp/: LimitUpDemo.cpp  LimitUpf1-5.cpp
